# pkgtrack

./: .pre-commit-config.yaml  PKGBUILD  README.md  pyproject.toml
.github/workflows/: lint.yml  release.yml
src/pkgtrack/: cli.py  collector.py  packages.py  report.py
systemd/: pkgtrack-collector.service
